still trying to pinpoint and fix alignment

--- a/styles.css
+++ b/styles.css
@@ -9,12 +9,45 @@ body {
     font-family: 'Open sans', sans-serif;
 }
 
-content {
+header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 1em;
 }
 
+header > img {
+    width: 6em;
+    height: 6em;
+    border-radius: 100%;
+    box-shadow: 0px 2px 10px #A2ABAB;
+    margin-top: 20vh;
+}
+
+header > h1 {
+    color: white;
+    background: #7D869C;
+    padding: 0.1em 0.5em;
+    margin-bottom: 20px;
+    border-radius: 1em; 
+    border: 1px solid black;
+}
 
 ul {
+    box-sizing: border-box;
     list-style: none;
+    padding: 0;
+    margin: 2em 2em;
+    text-align: center;
+}
+
+ul > li {
+    background-color: #7EFF79;
+    border: 1px solid black;
+    border-radius: 10em;
+    padding: 1em;
+    margin: 1em 0;
 }
 
 a {
@@ -26,36 +59,3 @@ a:active {
     color: white;
 }
 
-.link {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    background-color: #7EFF79;
-    border-radius: 10px;
-    padding: 1em;
-    margin: 15px;
-}
-
-.pfp {
-    width: 6em;
-    height: 6em;
-    border-radius: 100%;
-    box-shadow: 0px 2px 10px #A2ABAB;
-    margin-top: 20vh;
-}
-
-header {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    gap: 1em;
-}
-
-header > h1 {
-    color: white;
-    background: #7D869C;
-    padding: 0.1em 1em;
-    border-radius: 50px;
-}
